--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/registerStudentFregment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.StudentRegisterFragment">
+    tools:context=".Fragments.RegisterFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -83,6 +83,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/etEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/done_icon"
