--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,7 @@
     android:id="@+id/registerStudentFregment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.StudentRegisterFragment">
+    tools:context=".Fragments.RegisterFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
