--- a/app/src/main/res/layout/fragment_admin_register.xml
+++ b/app/src/main/res/layout/fragment_admin_register.xml
@@ -57,6 +57,7 @@
                 android:orientation="vertical"
                 android:padding="28dp">
 
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -76,7 +77,8 @@
                     android:id="@+id/etName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/done_icon" />
+                    android:drawableEnd="@drawable/done_icon"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -90,7 +92,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/done_icon"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -103,7 +106,8 @@
                     android:id="@+id/etInstitudeAbroad"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/done_icon" />
+                    android:drawableEnd="@drawable/done_icon"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -116,7 +120,22 @@
                     android:id="@+id/etCountry"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/done_icon" />
+                    android:drawableEnd="@drawable/done_icon"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha="0.7"
+                    android:text="City"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/etCity"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/done_icon"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -144,6 +163,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="none"
+                        android:textSize="14sp"
                         app:simpleItems="@array/Institutes" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -174,13 +194,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="none"
+                        android:textSize="14sp"
                         app:simpleItems="@array/Degrees" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <View
-                    android:layout_width="wrap_content"
-                    android:layout_height="10dp" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnRegister"
@@ -188,10 +206,6 @@
                     android:layout_height="60dp"
                     android:text="Register Student"
                     app:cornerRadius="32dp" />
-
-                <View
-                    android:layout_width="wrap_content"
-                    android:layout_height="10dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -209,7 +223,9 @@
 
             </LinearLayout>
 
+
         </androidx.cardview.widget.CardView>
+
     </RelativeLayout>
 
 </FrameLayout>
