--- a/app/src/main/res/layout/fragment_admin_register.xml
+++ b/app/src/main/res/layout/fragment_admin_register.xml
@@ -99,7 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.7"
-                    android:text="Institude abroad"
+                    android:text="Institute abroad"
                     android:textStyle="bold" />
 
                 <EditText
@@ -211,15 +211,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:orientation="horizontal" >
-
-                    <ProgressBar
-                        android:id="@+id/progressBar"
-                        style="?android:attr/progressBarStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-                </LinearLayout>
+                    android:orientation="horizontal" />
 
             </LinearLayout>
 
