--- a/app/src/main/res/layout/activity_upload_pdf.xml
+++ b/app/src/main/res/layout/activity_upload_pdf.xml
@@ -8,15 +8,15 @@
     tools:context=".UploadPDF">
 
     <TextView
+        android:id="@+id/text_pdf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Upload PDF"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="40sp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Upload PDF"
         android:textColor="@color/white"
-        android:id="@+id/text_pdf"/>
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tv_name"
@@ -26,16 +26,17 @@
         android:layout_below="@+id/text_pdf"
         android:layout_marginTop="20dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape"
-        android:hint="Enter DPF file name"
-        android:textColorHint="@color/white"
-        android:textColor="@color/white"
-        android:textsize="22sp"
-        android:layout_margin="10dp"/>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/shape"
+            android:hint="Enter DPF file name"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white">
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -45,12 +46,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/white"
+        android:padding="10dp"
         android:text="Upload PDF"
         android:textColor="@color/black"
         android:textSize="30sp"
-        android:backgroundTint="@color/white"
-        android:textStyle="bold"
-        android:padding="10dp"/>
+        android:textStyle="bold" />
 
 </RelativeLayout>
