--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -16,8 +16,17 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/my_primary"
-            android:alpha="0.7"/>
+            android:background="@color/purple_200"
+            android:alpha="0.7">
+
+            <Button
+                android:id="@+id/btnBackToMain"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/baseline_arrow_back_24"
+
+                />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
