--- a/app/src/main/res/layout/fragment_retrieve_p_d_f.xml
+++ b/app/src/main/res/layout/fragment_retrieve_p_d_f.xml
@@ -3,13 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RetrievePDFFragment" >
+    tools:context=".Fragments.OtherStudentsFragment" >
 
-
-    <ListView
-        android:id="@+id/listView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="7dp"/>
+        android:alpha="0.7">
 
+        <Button
+            android:id="@+id/btnBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/baseline_arrow_back_24"
+
+            />
+    </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewFiles"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
