--- a/app/src/main/res/layout/fragment_admin_register.xml
+++ b/app/src/main/res/layout/fragment_admin_register.xml
@@ -10,8 +10,19 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg"
         tools:context=".MainActivity">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.7">
+
+            <Button
+                android:id="@+id/btnBack"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/baseline_arrow_back_24"/>
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -19,29 +30,6 @@
             android:background="@color/purple_200"
             android:alpha="0.7"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/card_view"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="28dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/location_icon" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="GO MAP"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-medium"
-                android:textSize="32sp"
-                android:textColor="@color/white"/>
-
-        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
@@ -136,37 +124,6 @@
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/done_icon"
                     android:textSize="16sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.7"
-                    android:text="Institute in Israel"
-                    android:textStyle="bold" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/inputLayout"
-                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                    android:layout_width="322dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:hint="Select"
-                    app:boxCornerRadiusBottomEnd="20sp"
-                    app:boxCornerRadiusBottomStart="20sp"
-                    app:boxCornerRadiusTopEnd="20sp"
-                    app:boxCornerRadiusTopStart="20sp"
-                    app:boxStrokeWidth="0sp"
-                    app:boxStrokeWidthFocused="0sp">
-
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/inputInstituteIsrael"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="none"
-                        android:textSize="14sp"
-                        app:simpleItems="@array/Institutes" />
-
-                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
