--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,13 +10,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg"
+        android:background="@drawable/backg"
         tools:context=".MainActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
             android:alpha="0.7">
 
             <Button
@@ -26,29 +25,6 @@
                 android:background="@drawable/baseline_arrow_back_24"/>
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/card_view"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="28dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/location_icon" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="GO MAP"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-medium"
-                android:textSize="32sp"
-                android:textColor="@color/white"/>
-
-        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
@@ -62,13 +38,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="28dp">
+                android:padding="28dp"
+                android:background="@color/material_dynamic_tertiary90">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Log in"
-                    android:textColor="@color/my_primary"
+                    android:textColor="@color/purple_700"
                     android:textSize="32sp"
                     android:textStyle="bold" />
 
@@ -110,29 +87,6 @@
                     android:drawableEnd="@drawable/password_icon"
                     android:inputType="textPassword" />
 
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/inputLayout"
-                    style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                    android:layout_width="322dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:hint="Select"
-                    app:boxCornerRadiusBottomEnd="20sp"
-                    app:boxCornerRadiusBottomStart="20sp"
-                    app:boxCornerRadiusTopEnd="20sp"
-                    app:boxCornerRadiusTopStart="20sp"
-                    app:boxStrokeWidth="0sp"
-                    app:boxStrokeWidthFocused="0sp">
-
-                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                        android:id="@+id/inputTV"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="none"
-                        app:simpleItems="@array/Student_or_Admin" />
-
-                </com.google.android.material.textfield.TextInputLayout>
 
                 <View
                     android:layout_width="wrap_content"
