--- a/app/src/main/res/layout/fragment_show_images.xml
+++ b/app/src/main/res/layout/fragment_show_images.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.ShowImagesFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewImages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,14 +19,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/baseline_arrow_back_24"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp" />
     </RelativeLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
 </FrameLayout>
