--- a/app/src/main/res/layout/fragment_student_categories.xml
+++ b/app/src/main/res/layout/fragment_student_categories.xml
@@ -1,47 +1,78 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Fragments.StudentCategoriesFragment">
+    tools:context=".Fragments.StudentCategoriesFragment"
+    android:gravity="center"
+    android:background="@color/material_dynamic_tertiary90">
 
-    <Button
-        android:paddingBottom="5dp"
-        android:id="@+id/btnOtherStudent"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="Students from my country"
-        android:textSize="15dp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:background="@drawable/otherstudents"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Find student from my country"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
 
-    <Button
-        android:paddingBottom="40dp"
-        android:paddingLeft="10dp"
-        android:id="@+id/btnStudies"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="Studies"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:background="@drawable/studies"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"/>
+        <Button
+            android:id="@+id/btnOtherStudent"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/otherstudents"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="Fun"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:background="@drawable/fun"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Find study materials"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+        <Button
+            android:id="@+id/btnStudies"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/studies"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="25dp" /> <!-- Space between the second and third LinearLayout -->
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enjoy your time"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+        <Button
+            android:id="@+id/btnFun"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/fun"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 
 </LinearLayout>
