--- a/app/src/main/res/layout/fragment_admin_options.xml
+++ b/app/src/main/res/layout/fragment_admin_options.xml
@@ -1,22 +1,55 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.AdminOptionsFragment" >
+    android:orientation="vertical"
+    tools:context=".Fragments.StudentCategoriesFragment"
+    android:gravity="center"
+    android:background="@color/material_dynamic_tertiary90">
 
-
-    <Button
-        android:id="@+id/btnShowStudents"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Show all students form my institute" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show all students form my institute"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
 
-    <Button
-        android:id="@+id/btnRegisterStudent"
+        <Button
+            android:id="@+id/btnShowStudents"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:background="@drawable/studentsicon"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="100dp" /> <!-- Space between the second and third LinearLayout -->
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Register a new student" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Register a new student"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+        <Button
+            android:id="@+id/btnRegisterStudent"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:background="@drawable/registericon"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
 </LinearLayout>
