--- a/app/src/main/res/layout/fragment_admin_register.xml
+++ b/app/src/main/res/layout/fragment_admin_register.xml
@@ -27,7 +27,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/purple_200"
+            android:background="@color/material_dynamic_tertiary90"
             android:alpha="0.7"/>
 
 
