--- a/app/src/main/res/layout/fragment_retrieve_p_d_f.xml
+++ b/app/src/main/res/layout/fragment_retrieve_p_d_f.xml
@@ -1,9 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.OtherStudentsFragment" >
+    tools:context=".Fragments.ShowImagesFragment">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleViewFiles"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,12 +19,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/baseline_arrow_back_24"
-
-            />
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp" />
     </RelativeLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleViewFiles"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</RelativeLayout>
+</FrameLayout>
